# government_check_project

./: .env.example  .gitignore  README.md  api_test.py  docker-compose.yaml  gonggong_api_code_to_csv.py  gonggong_api_test.py  gonggong_code.json  goverment.session.sql  goverment_pdf_url_table.csv  government_speech.session.sql  main.py  makefile  naver_api_test.py  openwatch_api_test.py  public_vote_code.csv  public_vote_code_api_to_csv.py  pyproject.toml  requirements.txt  setup.py  vote_erection.csv  vote_erection_api_to_csv.py  vote_pledge_api_to_csv.py
analysis/: get_api_module.py  query_speak.py  summary_meeting_speak.py
api_test/: gonggong_api_test.py  mongodb_check.py  open_gov_api_test.py  pledge_api_test.py
app/: streamlit_app.py
comittee/: comittee_names.py  comittee_speak.py  get_comittee_schedule.py  speak_to_url.py  url_to_elastic_search.py
congress/: conf_dates.csv  daily_congress_active.py  get_meeting_schedule.py  get_meeting_speak_url.py  pdf_urls_to_csv.py  read_pdf_to_elastic_search.py
congress_meeting/: comittee_speak.py  docker-compose.yaml  get_api_module.py  get_pdf_urls.py  get_pdf_urls_to_csv.py  goverment_meeting_schedule_api.py  goverment_metting_api.py  pdf_url.csv  pdf_urls_to_csv.py  query_speak.py  read_pdf.py  read_pdf_to_elastic_search.py
goverment_airflow/: docker-compose.yaml
modules/: database_connectors.py  database_handler.py  db_check.py  db_manager.py  fetch_from_api.py  get_api.py  module_test.py  pdf_reader.py
pipeline/: base_pipeline.py
pledge_api/: public_voteId_api_to_csv.py  vote_erection_api_to_csv.py
(+220 files in other folders)
