[project]
name = "government-check-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "openai>=1.83.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]
